# agno-dicord-bot

./: README.md  agno_discord.py  main.py  pyproject.toml
tmp/: agent.db
