[project]
name = "agno-discord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.19",
    "chromadb>=1.3.7",
    "ddgs>=9.10.0",
    "discord-py>=2.6.4",
    "google-genai>=1.56.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
]
